# docs/swagger.yaml
@@ -4,8 +4,6 @@ definitions:
     properties:
       email:
         type: string
-      id:
-        type: integer
       name:
         type: string
       password:
@@ -85,6 +83,26 @@ paths:
       tags:
       - User
   /users/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete User
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: user deleted
+          schema:
+            type: string
+      summary: Delete User
+      tags:
+      - User
     get:
       consumes:
       - application/json
@@ -103,6 +121,32 @@ paths:
           schema:
             $ref: '#/definitions/model.UserResponse'
       summary: Detail User
+      tags:
+      - User
+    put:
+      consumes:
+      - application/json
+      description: Update User
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: user request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/model.UserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.UserResponse'
+      summary: Update User
       tags:
       - User
 swagger: "2.0"
